<resources>
    <string name="app_name">Baking App</string>
    <string name="placeholder_text">Recipe title</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="steps_title">Instructions</string>
    <string name="recipe_step">Step number </string>
    <string name="player_description">This media player displays a short video for the current recipe step</string>
    <string name="forward_button_description">This button move to the next recipe step</string>
    <string name="backward_button_description">This button move to the previous recipe step</string>
    <string name="ingredients_description"> Recipe image</string>
    <string name="widget_ingredients_placeholder">Press to select recipe.</string>
</resources>
