<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_view"
        android:contentDescription="@string/player_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_half"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <ImageView
        android:id="@+id/recipe_player_image"
        android:contentDescription="@string/ingredients_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baking_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_half"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="256dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_button_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="256dp" />

    <ScrollView
        android:id="@+id/step_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/horizontal_button_divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            tools:text="@tools:sample/backgrounds/scenic"/>
    </ScrollView>

    <ImageButton
        android:id="@+id/icon_backward"
        android:contentDescription="@string/backward_button_description"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_backward"
        android:background="@color/colorBackground"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@id/horizontal_half"
        app:layout_constraintRight_toLeftOf="@id/icon_forward"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_button_divider"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
        android:id="@+id/icon_forward"
        android:contentDescription="@string/forward_button_description"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_backward"
        android:background="@color/colorBackground"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:rotation="180"
        app:layout_constraintTop_toTopOf="@id/horizontal_half"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_button_divider"
        app:layout_constraintLeft_toRightOf="@id/icon_backward"/>

    <View
        android:id="@+id/divider"
        android:layout_width="5dp"
        android:layout_height="50dp"
        android:background="@android:color/black"
        app:layout_constraintRight_toRightOf="@+id/icon_backward"
        app:layout_constraintLeft_toLeftOf="@id/icon_forward"
        app:layout_constraintTop_toBottomOf="@id/icon_forward"
        app:layout_constraintBottom_toTopOf="@id/icon_forward"/>

</androidx.constraintlayout.widget.ConstraintLayout>